# tinkering2

./: .gitignore  main.py  pyproject.toml
src/tinkering2/: run.sh  train.py  utils.py
src/tinkering2/dataset/ifbench/: instructions.py  instructions_registry.py  instructions_util.py  sample.json  simple_eval.py
